--- a/WolvenKit/Views/Shell/MainView.xaml
+++ b/WolvenKit/Views/Shell/MainView.xaml
@@ -205,6 +205,9 @@
                     <DataTemplate DataType="{x:Type dialogVMs:NewFileViewModel}">
                         <dialogs:NewFileView ViewModel="{Binding}" />
                     </DataTemplate>
+                    <DataTemplate DataType="{x:Type dialogVMs:PluginsToolViewModel}">
+                        <dialogs:PluginsToolView ViewModel="{Binding}" />
+                    </DataTemplate>
                     <DataTemplate DataType="{x:Type dialogVMs:CreateClassDialogViewModel}">
                         <dialogs:CreateClassDialog ViewModel="{Binding}" />
                     </DataTemplate>
